Updates to portfolio

--- a/index.html
+++ b/index.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Owami Mgxekwa - Developer & Educator</title>
-    <meta name="description" content="Software Developer & IT Systems Development Lecturer specializing in Java, JavaScript, and modern web technologies.">
+    <meta name="description"
+        content="Software Developer & IT Systems Development Lecturer specializing in Java, JavaScript, and modern web technologies.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=JetBrains+Mono:wght@400;500;600&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=JetBrains+Mono:wght@400;500;600&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./css/index.css">
 </head>
+
 <body>
     <nav class="navbar" id="navbar">
         <div class="nav-container">
@@ -20,7 +25,9 @@
             <ul class="nav-menu" id="nav-menu">
                 <li><a href="#home" class="nav-link">Home</a></li>
                 <li><a href="#about" class="nav-link">About</a></li>
-                <li><a href="#image-showcase" class="nav-link">Behind The Code</a></li> <li><a href="#skills" class="nav-link">Skills</a></li>
+                <li><a href="#cv" class="nav-link">CV</a></li>
+                <li><a href="#image-showcase" class="nav-link">Behind The Code</a></li>
+                <li><a href="#skills" class="nav-link">Skills</a></li>
                 <li><a href="#projects" class="nav-link">Projects</a></li>
                 <li><a href="#journey" class="nav-link">Journey</a></li>
                 <li><a href="#contact" class="nav-link">Contact</a></li>
@@ -50,7 +57,8 @@
                     <span class="title-subtitle">Developer & Educator</span>
                 </h1>
                 <p class="hero-description">
-                    Crafting digital experiences through code while shaping the next generation of developers at Gauteng City College
+                    Crafting digital experiences through code while shaping the next generation of developers at Gauteng
+                    City College
                 </p>
                 <div class="hero-stats">
                     <div class="stat">
@@ -100,24 +108,24 @@
                     <div class="about-card">
                         <h3>The Developer</h3>
                         <p>
-                            Passionate about creating robust applications with Java Swing as my primary toolkit, 
-                            while exploring the dynamic world of modern web technologies. My code is my craft, 
+                            Passionate about creating robust applications with Java Swing as my primary toolkit,
+                            while exploring the dynamic world of modern web technologies. My code is my craft,
                             and every project is an opportunity to push boundaries.
                         </p>
                     </div>
                     <div class="about-card">
                         <h3>The Educator</h3>
                         <p>
-                            As an IT Systems Development Lecturer at Gauteng City College, I bridge the gap 
-                            between theoretical knowledge and practical application, inspiring students to 
+                            As an IT Systems Development Lecturer at Gauteng City College, I bridge the gap
+                            between theoretical knowledge and practical application, inspiring students to
                             become the innovators of tomorrow.
                         </p>
                     </div>
                     <div class="about-card">
                         <h3>The Learner</h3>
                         <p>
-                            Currently diving deep into React, TypeScript, and C# to expand my full-stack 
-                            capabilities. In technology, the moment you stop learning is the moment you 
+                            Currently diving deep into React, TypeScript, and C# to expand my full-stack
+                            capabilities. In technology, the moment you stop learning is the moment you
                             become obsolete.
                         </p>
                     </div>
@@ -157,7 +165,73 @@
         </div>
     </section>
 
-   <section id="image-showcase" class="image-showcase">
+    <section id="cv" class="cv-section">
+        <div class="container">
+            <div class="section-header">
+                <h2 class="section-title">Curriculum Vitae</h2>
+                <div class="section-line"></div>
+                <p class="section-subtitle">Download my complete professional profile</p>
+            </div>
+            <div class="cv-content">
+                <div class="cv-preview">
+                    <div class="cv-document">
+                        <div class="document-icon">📄</div>
+                        <div class="document-info">
+                            <h3>Owami Mgxekwa's CV</h3>
+                            <p>Complete professional experience, education, and skills overview</p>
+                            <div class="document-meta">
+                                <span class="file-type">PDF Document</span>
+                                <span class="file-size">~2.5 MB</span>
+                                <span class="last-updated">Updated 2025</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="cv-actions">
+                    <div class="cv-highlights">
+                        <h4>What's Inside:</h4>
+                        <ul class="highlights-list">
+                            <li>
+                                <span class="highlight-icon">🎓</span>
+                                <span>Educational Background & Certifications</span>
+                            </li>
+                            <li>
+                                <span class="highlight-icon">💼</span>
+                                <span>Professional Experience & Achievements</span>
+                            </li>
+                            <li>
+                                <span class="highlight-icon">🛠️</span>
+                                <span>Technical Skills & Competencies</span>
+                            </li>
+                            <li>
+                                <span class="highlight-icon">🏆</span>
+                                <span>Projects & Portfolio Highlights</span>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="cv-buttons">
+                        <a href="./assets/Uwami Mgxekwa's CV.pdf" download="Owami_Mgxekwa_CV.pdf"
+                            class="cv-button primary">
+                            <div class="button-icon">⬇️</div>
+                            <div class="button-text">
+                                <span class="button-title">Download CV</span>
+                                <span class="button-subtitle">PDF Format</span>
+                            </div>
+                        </a>
+                        <a href="./assets/Uwami Mgxekwa's CV.pdf" target="_blank" class="cv-button secondary">
+                            <div class="button-icon">👁️</div>
+                            <div class="button-text">
+                                <span class="button-title">View Online</span>
+                                <span class="button-subtitle">Open in browser</span>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="image-showcase" class="image-showcase"></section>
     <div class="container">
         <div class="section-header">
             <h2 class="section-title">Behind the Code</h2>
@@ -194,9 +268,9 @@
             </div>
         </div>
     </div>
-</section>
+    </section>
 
-    
+
     <section id="skills" class="skills">
         <div class="container">
             <div class="section-header">
@@ -211,37 +285,49 @@
                             <div class="skill-icon">☕</div>
                             <h4>Java</h4>
                             <p>Primary language with Java Swing expertise</p>
-                            <div class="skill-bar"><div class="skill-progress"></div></div>
+                            <div class="skill-bar">
+                                <div class="skill-progress"></div>
+                            </div>
                         </div>
                         <div class="skill-card" data-skill="90">
                             <div class="skill-icon">🌐</div>
                             <h4>JavaScript</h4>
                             <p>Modern ES6+ and DOM manipulation</p>
-                            <div class="skill-bar"><div class="skill-progress"></div></div>
+                            <div class="skill-bar">
+                                <div class="skill-progress"></div>
+                            </div>
                         </div>
                         <div class="skill-card" data-skill="85">
                             <div class="skill-icon">⚡</div>
                             <h4>C++</h4>
                             <p>System programming and algorithms</p>
-                            <div class="skill-bar"><div class="skill-progress"></div></div>
+                            <div class="skill-bar">
+                                <div class="skill-progress"></div>
+                            </div>
                         </div>
                         <div class="skill-card" data-skill="80">
                             <div class="skill-icon">🐍</div>
                             <h4>Python</h4>
                             <p>Automation and data processing</p>
-                            <div class="skill-bar"><div class="skill-progress"></div></div>
+                            <div class="skill-bar">
+                                <div class="skill-progress"></div>
+                            </div>
                         </div>
                         <div class="skill-card" data-skill="85">
                             <div class="skill-icon">🗃️</div>
                             <h4>SQL</h4>
                             <p>Database design and optimization</p>
-                            <div class="skill-bar"><div class="skill-progress"></div></div>
+                            <div class="skill-bar">
+                                <div class="skill-progress"></div>
+                            </div>
                         </div>
                         <div class="skill-card" data-skill="90">
                             <div class="skill-icon">🎨</div>
                             <h4>CSS</h4>
                             <p>Modern styling and animations</p>
-                            <div class="skill-bar"><div class="skill-progress"></div></div>
+                            <div class="skill-bar">
+                                <div class="skill-progress"></div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -298,7 +384,8 @@
                         </div>
                     </div>
                     <p class="project-description">
-                        Comprehensive desktop application for managing student records, grades, and academic progress with intuitive GUI design.
+                        Comprehensive desktop application for managing student records, grades, and academic progress
+                        with intuitive GUI design.
                     </p>
                     <div class="project-tech">
                         <span class="tech-tag">Java</span>
@@ -324,7 +411,8 @@
                         </div>
                     </div>
                     <p class="project-description">
-                        Modern web-based inventory management system with real-time updates and comprehensive reporting features.
+                        Modern web-based inventory management system with real-time updates and comprehensive reporting
+                        features.
                     </p>
                     <div class="project-tech">
                         <span class="tech-tag">JavaScript</span>
@@ -350,7 +438,8 @@
                         </div>
                     </div>
                     <p class="project-description">
-                        Advanced data analysis tool for processing and visualizing complex datasets with automated reporting capabilities.
+                        Advanced data analysis tool for processing and visualizing complex datasets with automated
+                        reporting capabilities.
                     </p>
                     <div class="project-tech">
                         <span class="tech-tag">Python</span>
@@ -380,7 +469,8 @@
                 <div class="timeline-item" data-year="2019">
                     <div class="timeline-content">
                         <h3>Programming Foundations</h3>
-                        <p>Started with C++ and discovered the beauty of algorithmic thinking and system programming.</p>
+                        <p>Started with C++ and discovered the beauty of algorithmic thinking and system programming.
+                        </p>
                         <div class="timeline-tech">
                             <span>C++</span>
                             <span>Algorithms</span>
@@ -390,7 +480,8 @@
                 <div class="timeline-item" data-year="2020">
                     <div class="timeline-content">
                         <h3>Java Mastery</h3>
-                        <p>Dove deep into Java development, specializing in desktop applications with Swing framework.</p>
+                        <p>Dove deep into Java development, specializing in desktop applications with Swing framework.
+                        </p>
                         <div class="timeline-tech">
                             <span>Java</span>
                             <span>Swing</span>
@@ -401,7 +492,8 @@
                 <div class="timeline-item" data-year="2021">
                     <div class="timeline-content">
                         <h3>Web Development</h3>
-                        <p>Expanded into web technologies, mastering HTML, CSS, and JavaScript for modern web applications.</p>
+                        <p>Expanded into web technologies, mastering HTML, CSS, and JavaScript for modern web
+                            applications.</p>
                         <div class="timeline-tech">
                             <span>HTML5</span>
                             <span>CSS3</span>
@@ -423,7 +515,8 @@
                 <div class="timeline-item" data-year="2024">
                     <div class="timeline-content">
                         <h3>Teaching & Mentoring</h3>
-                        <p>Began my journey as an educator at Gauteng City College, sharing knowledge with aspiring developers.</p>
+                        <p>Began my journey as an educator at Gauteng City College, sharing knowledge with aspiring
+                            developers.</p>
                         <div class="timeline-tech">
                             <span>Education</span>
                             <span>Mentoring</span>
@@ -455,7 +548,8 @@
             <div class="contact-content">
                 <div class="contact-info">
                     <h3>Ready to collaborate?</h3>
-                    <p>Whether you're looking for a developer, need educational consulting, or want to discuss the latest in tech, I'm always excited to connect with fellow innovators.</p>
+                    <p>Whether you're looking for a developer, need educational consulting, or want to discuss the
+                        latest in tech, I'm always excited to connect with fellow innovators.</p>
                     <div class="contact-details">
                         <div class="contact-item">
                             <div class="contact-icon">📧</div>
@@ -534,4 +628,5 @@
 
     <script src="./js/script.js"></script>
 </body>
+
 </html>
