Add logo and update favicon links in index.html
Added assets/logo.png and updated index.html to include multiple favicon and icon links for various platforms. Changed Live Server port in .vscode/settings.json from 5501 to 5502.

--- a/index.html
+++ b/index.html
@@ -9,9 +9,33 @@
         content="Software Developer & IT Systems Development Lecturer specializing in Java, JavaScript, and modern web technologies.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=JetBrains+Mono:wght@400;500;600&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=JetBrains+Mono:wght@400;500;600&display=swap" rel="stylesheet">
+    <!-- Standard favicon -->
+    <link rel="icon" href="./assets/logo.png" type="image/x-icon">
+
+    <!-- PNG icons for modern browsers -->
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/logo.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/logo.png">
+
+    <!-- Apple Touch Icon (iOS) -->
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/logo.png">
+
+    <!-- Android Chrome -->
+    <link rel="icon" type="image/png" sizes="192x192" href="./assets/logo.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="./assets/logo.png">
+
+    <!-- Safari pinned tab (macOS) -->
+    <link rel="mask-icon" href="./assets/logo.png" color="#f1c40f">
+
+    <!-- Web manifest -->
+    <link rel="manifest" href="./assets/logo.png">
+
+    <!-- Microsoft Tiles -->
+    <meta name="msapplication-TileColor" content="#f1c40f">
+    <meta name="msapplication-TileImage" content="/mstile-150x150.png">
+
+    <!-- Theme color for mobile browsers -->
+    <meta name="theme-color" content="#f1c40f">
     <link rel="stylesheet" href="./css/index.css">
 </head>
 
