--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
         content="Software Developer & IT Systems Development Lecturer specializing in Java, JavaScript, and modern web technologies.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=JetBrains+Mono:wght@400;500;600&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=JetBrains+Mono:wght@400;500;600&display=swap"
+        rel="stylesheet">
     <!-- Standard favicon -->
     <link rel="icon" href="./assets/logo.png" type="image/x-icon">
 
@@ -670,11 +672,13 @@
                 <div class="message-avatar">OM</div>
                 <div>
                     <div class="message-content">
-                        Hi! 👋 I'm Owami's personal assistant. How can I help you learn more about Owami's work and expertise?
+                        Hi! 👋 I'm Owami's personal assistant. How can I help you learn more about Owami's work and
+                        expertise?
                     </div>
                     <div class="quick-replies">
                         <button class="quick-reply-btn" data-message="Tell me about your skills">Skills</button>
-                        <button class="quick-reply-btn" data-message="What projects have you worked on?">Projects</button>
+                        <button class="quick-reply-btn"
+                            data-message="What projects have you worked on?">Projects</button>
                         <button class="quick-reply-btn" data-message="How can I contact you?">Contact</button>
                     </div>
                 </div>
