Add theme toggle button and light mode styles
Introduces a theme toggle button to the navigation and adds CSS variables and styles for light mode. Updates color variables for both dark and light themes, and provides transitions and icon handling for the toggle button.

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <span class="logo-text">OM</span>
                 <div class="logo-pulse"></div>
             </div>
-            <ul class="nav-menu" id="nav-menu">
+            <ul class="nav-menu"`r`n            \u003cbutton class="theme-toggle" id="themeToggle" aria-label="Toggle theme"\u003e`r`n                \u003cspan class="sun-icon"\u003e\u003c/span\u003e`r`n                \u003cspan class="moon-icon"\u003e\u003c/span\u003e`r`n            \u003c/button\u003e`r`n            \u003cul class="nav-menu" id="nav-menu">
                 <li><a href="#home" class="nav-link">Home</a></li>
                 <li><a href="#about" class="nav-link">About</a></li>
                 <li><a href="#cv" class="nav-link">CV</a></li>
