--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <span class="logo-text">OM</span>
                 <div class="logo-pulse"></div>
             </div>
-            <ul class="nav-menu"`r`n            \u003cbutton class="theme-toggle" id="themeToggle" aria-label="Toggle theme"\u003e`r`n                \u003cspan class="sun-icon"\u003e\u003c/span\u003e`r`n                \u003cspan class="moon-icon"\u003e\u003c/span\u003e`r`n            \u003c/button\u003e`r`n            \u003cul class="nav-menu" id="nav-menu">
+            <ul class="nav-menu" id="nav-menu">
                 <li><a href="#home" class="nav-link">Home</a></li>
                 <li><a href="#about" class="nav-link">About</a></li>
                 <li><a href="#cv" class="nav-link">CV</a></li>
@@ -58,10 +58,16 @@
                 <li><a href="#journey" class="nav-link">Journey</a></li>
                 <li><a href="#contact" class="nav-link">Contact</a></li>
             </ul>
-            <div class="hamburger" id="hamburger">
-                <span></span>
-                <span></span>
-                <span></span>
+            <div class="nav-actions">
+                <button class="theme-toggle" id="themeToggle" aria-label="Toggle theme">
+                    <span class="sun-icon">☀️</span>
+                    <span class="moon-icon">🌙</span>
+                </button>
+                <div class="hamburger" id="hamburger">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
             </div>
         </div>
     </nav>
